--- a/app.json
+++ b/app.json
@@ -23,6 +23,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Need photos permission to upload your images"
+        }
+      ]
+    ]
   }
 }
