--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.5"
+    "expo-location": "~18.0.5",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
